# I.BA_DENG_MM.PROJECT

./: .gitignore  README.md  docker-compose.yaml  pyproject.toml
kestra/workflows/: backfill_workflow.yaml  elt_file_workflow.yaml  ingest_current_workflow.yaml
notebooks/: exploration.ipynb
src/ingestion/: ingest.py  ingest_backfill.py  ingest_current.py
src/ingestion/transformation/: stop_event_transformation.py
src/transformation/: stop_event_transformation.py
src/util/: db_handler.py
